<resources>

    <string name="app_name">TV Maze</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="communication">Communication</string>
    <string name="action_settings">Settings</string>
    <string name="people">People</string>
    <string name="about">About</string>
    <string name="shows">Shows</string>
    <string name="share">Share</string>
    <string name="try_again">Try Again</string>
    <string name="nothing_found">Nothing found :(</string>
    <string name="no_connection">No Connection :(</string>

    <string name="nothing_found_desc">Sorry, there doesn\'t seem to be any content!</string>
    <string name="app_description">A simple TVMaze client for android</string>
    <string name="no_connection_desc">Sorry, you don\'t seem to be connected to the internet,
        please connect to a network first and then try again.</string>
    <string name="title_activity_show">ShowActivity</string>

    <string name="transition_image">ImageTransition</string>

</resources>
