<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shows"
            android:icon="@drawable/ic_movie_black"
            android:title="@string/shows" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_account_black"
            android:title="@string/people" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_black"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
